--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>初めてのGit</h1>
         <p>Gitでバージョン管理</p>
+        <img src="git-logo.png" alt="git logo">
     </body>
 </html>
